add_subdirectory(message_queue)
add_subdirectory(kernel)
add_subdirectory(ctc_srv)
add_subdirectory(mes)
add_subdirectory(cms)
add_subdirectory(server)
add_subdirectory(common)
add_subdirectory(ctbackup)
add_subdirectory(dml_parser)
add_subdirectory(sql_check_ctx)
add_subdirectory(sql_enrich_context_for_cached)
add_subdirectory(sql_get_context_cache)